--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,3 +1,3 @@
-@import url("./custom-properties.css");
-@import url("./base.css");
-@import url("./custom-media.css");
+@import url('./custom-properties.css');
+@import url('./base.css');
+@import url('./custom-media.css');
